<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_chat"
        android:icon="@mipmap/ic_chat_black_24dp"
        android:title="@string/navigation_chat"/>
    <item
        android:id="@+id/navigation_tasks"
        android:icon="@mipmap/ic_assignment_black_24dp"
        android:title="@string/navigation_tasks"/>
    <item
        android:id="@+id/navigation_personal_task"
        android:icon="@mipmap/ic_assignment_ind_black_24dp"
        android:title="@string/navigation_personal_tasks"/>
    <item
        android:id="@+id/navigation_account"
        android:icon="@mipmap/ic_settings_applications_black_24dp"
        android:title="@string/navigation_account"/>

</menu>